Update files : Add AdSense Script

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
   })(window,document,'script','dataLayer','GTM-KJHZP99');</script>
   <!-- End Google Tag Manager -->
 
+  <script data-ad-client="ca-pub-9040658153463359" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160816360-1"></script>
 <script>
@@ -34,7 +36,6 @@
             <a href="https://www.gouvernement.fr/"><h1>Gouvernement.fr</h1></a>
         </div>  
     </div>
-
     <div class="footer text-center">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
