--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   })(window,document,'script','dataLayer','GTM-KJHZP99');</script>
   <!-- End Google Tag Manager -->
 
+  <script data-ad-client="ca-pub-9040658153463359" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160816360-1"></script>
 <script>
