Update files : Text align center in contact

--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
   <!-- End Google Tag Manager (noscript) -->
     <div class="container">
         <div class="jumbotron">
-            <a href="https://www.gouvernement.fr/"><h1>Gouvernement.fr</h1></a>
+            <a href="https://www.gouvernement.fr/" class="text-center"><h1>Gouvernement.fr</h1></a>
 
-            <div id='infosContact'>
+            <div id='infosContact' class="text-center">
               <h2 class="text-center mt-5">Symptômes du Coronavirus</h2>
               <h3 class="text-center">Trois signes principaux</h3>
     
